@@ -7,8 +7,6 @@ Testing
 - api again
 
 Cleanup
-- new module documentation
-  - and various updates
 
 Audit
 - code review to reduce memory footprint
@@ -24,6 +22,7 @@ Design
 - speaker scheduler??
   - rework monitor module??
 - metric to get available metrics
+- metric period/frequency sent, something??
 - update thread for monitor module??
 - nodelist
   - use own list instead of 'List' to store iterators?
