@@ -2,6 +2,8 @@
 
 	* Split off cerebro utility functions and created libutil
 	convenience library.
+
+	* Documentation update.
 	
 2005-06-18  Albert Chu  <chu11@llnl.gov>
 
